--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Merve.</h1>
-      <h2>a programmer.</h2> 
+      <h2>a web developer.</h2> 
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain-img">
     </div>
